--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
+logs/
+
 HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-.idea
+.idea/
 ### STS ###
 .apt_generated
 .classpath
