setting: gradle build with test code

--- a/build.gradle
+++ b/build.gradle
@@ -32,4 +32,5 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+	systemProperty 'jasypt.encryptor.password', findProperty("jasypt.encryptor.password")
 }
