--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -87,6 +87,6 @@ jobs:
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: test-env
+        service: withme-main
         cluster: withMe
         wait-for-service-stability: true
