feat: test코드를 위한 actions 코드 변경 및 api테스트 코드 삽입

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -48,7 +48,7 @@ jobs:
       run: chmod +x gradlew
       
     - name: Build with Gradle
-      run: ./gradlew build -Pjasypt.encryptor.password=${{ secrets.JASYPT_PWD }}
+      run: ./gradlew build -Pjasypt.encryptor.password=${{ secrets.JASYPT_PWD }} -Dspring.profiles.active=test
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
