--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
-        run: ./gradlew build -Pjasypt.encryptor.password=${{ secrets.JASYPT_PWD }}
+        run: ./gradlew build -Pjasypt.encryptor.password=${{ secrets.JASYPT_PWD }} -Dspring.profiles.active=test
       - name: Publish Unit Test Results
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: ${{ always() }}  # 테스트가 실패하여도 Report를 보기 위해 `always`로 설정
