--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ dependencies {
     // https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib
     implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'
 
+    // firebase sdk
+    implementation 'com.google.firebase:firebase-admin:6.8.1'
+    // okhttp
+    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.2.2'
 }
 
 test {
